# movies

./: movies_graph.ipynb  pyproject.toml
nodes/: Genre.csv  ProductionCompany.csv
relationships/: HAS_GENRE.csv  PRODUCED.csv
